--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
                 <p>This is a completely basic popup, no options set.<p>
             </div> -->
 
-        <script src="lib/cordova.js"></script> 
-        <!-- <script src="cordova.js"></script> 
-        <script src="barcodescanner.js"></script> -->
+        <!-- <script src="lib/cordova.js"></script>  -->
+        <script src="cordova.js"></script> 
+        <script src="barcodescanner.js"></script>
         <!--<script type="text/javascript" src="childbrowser.js"></script>-->
         <script type="text/javascript" src="controller/controller.js"></script>
         <script type="text/javascript" src="controller/db_manager.js"></script>
