--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <label for="basic">Contraseña:</label><br />
                     <input type="password" name="argClave" id="pass" value="" placeholder="Contraseña"/>
                     <center><input type="button" value="INGRESAR" id="logear" data-inline="true"/>
-                    <!-- <a href="#popupBasic" data-rel="dialog">Open dialog</a> -->
-                    <!-- <a href="#dialogoError" data-rel="dialog">Open dialog</a> -->
+                        <!-- <a href="#popupBasic" data-rel="dialog">Open dialog</a>
+                        <a href="#dialogoError" data-rel="dialog">Open dialog</a> -->
                     </center>
                 </form>
                 <center><img src="style/img/logo_dibam.jpg"></center>    
