--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <label for="basic">Contraseña:</label><br />
                     <input type="password" name="argClave" id="pass" value="" placeholder="Contraseña"/>
                     <center><input type="button" value="INGRESAR" id="logear" data-inline="true"/>
-                        <!-- <a href="#popupBasic" data-rel="dialog">Open dialog</a>
-                        <a href="#dialogoError" data-rel="dialog">Open dialog</a> -->
+                        <!-- <a href="#popupBasic" data-rel="dialog">Open dialog1</a>
+                        <a href="#dialogoError" data-rel="dialog">Open dialog2</a> -->
                     </center>
                 </form>
                 <center><img src="style/img/logo_dibam.jpg"></center>    
@@ -291,9 +291,10 @@
             
         </div>
         <div data-role="page" id="popupBasic">
-        <div data-role="header" ><p>Titulo</p></div>
-        <div data-role="content"><p>content</p></div>
-        <div data-role="footer" class="ui-bar-a-footer"><p>footer</p></div>
+            <div data-role="header" ><p>Titulo</p></div>
+            <div data-role="content"><p>content</p></div>
+            <div data-role="footer" class="ui-bar-a-footer"><p>footer</p>
+        </div>
             <!-- <div data-role="popup" id="popupBasic">
                 <p>This is a completely basic popup, no options set.<p>
             </div> -->
