--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
                     <input type="text" name="argUsuario" id="username" value="" placeholder="Usuario"/><br /><br />
                     <label for="basic">Contraseña:</label><br />
                     <input type="password" name="argClave" id="pass" value="" placeholder="Contraseña"/>
-                    <center><input type="button" value="INGRESAR" id="logear" data-inline="true"/>
-                        <!--<a href="#popupDialog" data-rel="popup">Open dialog1</a>-->
-                        
+                    <center>
+                        <input type="button" value="INGRESAR" id="logear" data-inline="true"/>
                     </center>
                 </form>
                 <center><img src="style/img/logo_dibam.jpg"></center>    
@@ -284,25 +283,24 @@
         </div>
         <!-- Fin Libros Solicitudes Enviadas-->
 
-       <!--  <div data-role="dialog" id="dialogoError">
-            <p id="mensajeError"><p>
-        </div> -->
-        <!--<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="max-width:400px;" class="ui-corner-all ui-popup ui-body-c ui-overlay-shadow" aria-disabled="false" data-disabled="false" data-shadow="true" data-corners="true" data-transition="none" data-position-to="origin">
-                    <div data-role="header" data-theme="a" class="ui-corner-top ui-header ui-bar-a" role="banner">
-                        <h1 class="ui-title" role="heading" aria-level="1">Delete Page?</h1>
-                    </div>
-                    <div data-role="content" data-theme="d" class="ui-corner-bottom ui-content ui-body-d" role="main">
-                        <h3 class="ui-title">Are you sure you want to delete this page?</h3>
-                        <p>This action cannot be undone.</p>
-                        <a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-inline ui-btn-up-c"><span class="ui-btn-inner"><span class="ui-btn-text">Cancel</span></span></a>    
-                        <a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-inline ui-btn-up-b"><span class="ui-btn-inner"><span class="ui-btn-text">Delete</span></span></a>  
-                    </div>
-                </div>-->
-            <!-- <div data-role="popup" id="popupBasic">
-                <p>This is a completely basic popup, no options set.<p>
-            </div> -->
+        <!-- Inicio Dialogo Error-->
+        <div class="ui-popup-container pop ui-popup-hidden" id="popupDialog-popup">
+            <div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="c" style="max-width:400px;" class="ui-corner-all ui-popup ui-body-c ui-overlay-shadow">
+                <div data-role="header" data-theme="a" class="ui-corner-top ui-header ui-bar-a" role="banner">
+                    <h1 class="ui-title" role="heading" aria-level="1" id="tituloError" ></h1>
+                </div>
+                <div data-role="content" data-theme="d" class="ui-corner-bottom ui-content ui-body-d" role="main">
+                    <center>
+                        <h3 class="ui-title" id="tituloError"></h3>
+                    
+                        <a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-inline ui-btn-up-b"><span class="ui-btn-inner"><span class="ui-btn-text">Aceptar</span></span></a> 
+                    </center>
+                </div>
+            </div>
+        </div>
+        <!-- Fin Dialogo error-->
 
-        <!-- <script src="lib/cordova.js"></script> -->
+        <!--<script src="lib/cordova.js"></script>-->
         <script src="cordova.js"></script> 
         <script src="barcodescanner.js"></script>
         <!--<script type="text/javascript" src="childbrowser.js"></script>-->
